libaudioverse-sys/src/libaudioverse/libaudioverse.h


/**The public interface to Libaudioverse.*/

/*Forward-declares all Libaudioverse types.*/

typedef int LavError;

typedef int LavHandle;

typedef void (*LavParameterlessCallback)(LavHandle nodeHandle, void* userdata);

//Like parameterless callback, but for callbacks that need to know about time.
typedef void (*LavTimeCallback)(LavHandle handle, double time, void* userdata);

enum Lav_ERRORS {
	Lav_ERROR_NONE, //everything is OK.
	Lav_ERROR_UNKNOWN, //We know something has gone wrong, but can't figure out what.
	Lav_ERROR_NOT_INITIALIZED,
	Lav_ERROR_TYPE_MISMATCH, //Tried to get/set something with the wrong type, i.e. properties.
	Lav_ERROR_INVALID_PROPERTY, //one of the functions taking a slot got passed an invalid number.
	Lav_ERROR_NULL_POINTER, //you passed a NULL pointer into something that shouldn't have it.
	Lav_ERROR_MEMORY, //a memory problem which probably isn't the fault of the application.
	Lav_ERROR_INVALID_POINTER,
	Lav_ERROR_INVALID_HANDLE,
	Lav_ERROR_RANGE, //out of range function parameter.
	Lav_ERROR_CANNOT_INIT_AUDIO, //We couldn't initialize the audio library or open a device
	Lav_ERROR_NO_SUCH_DEVICE,
	Lav_ERROR_FILE, //error to do with files.
	Lav_ERROR_FILE_NOT_FOUND, //specifically, we couldn't find a file.

	Lav_ERROR_HRTF_INVALID,

	Lav_ERROR_CANNOT_CROSS_SERVERS, 

	Lav_ERROR_CAUSES_CYCLE,
	Lav_ERROR_PROPERTY_IS_READ_ONLY,

	Lav_ERROR_OVERLAPPING_AUTOMATORS,

	Lav_ERROR_CANNOT_CONNECT_TO_PROPERTY,
	Lav_ERROR_BUFFER_IN_USE,
	
	Lav_ERROR_INTERNAL= 999,
};


enum Lav_PROPERTY_TYPES {
	Lav_PROPERTYTYPE_INT,
	Lav_PROPERTYTYPE_FLOAT,
	Lav_PROPERTYTYPE_DOUBLE,
	Lav_PROPERTYTYPE_STRING,
	Lav_PROPERTYTYPE_FLOAT3,
	Lav_PROPERTYTYPE_FLOAT6,
	Lav_PROPERTYTYPE_FLOAT_ARRAY,
	Lav_PROPERTYTYPE_INT_ARRAY,
	Lav_PROPERTYTYPE_BUFFER,
};


//Libaudioverse object types.
enum Lav_OBJECT_TYPES {
	Lav_OBJTYPE_SERVER,
	Lav_OBJTYPE_BUFFER,

	//Nodes from here.
	Lav_OBJTYPE_GENERIC_NODE, //this is not something you should ever see outside the library, and basically means none.
	Lav_OBJTYPE_ENVIRONMENT_NODE,
	Lav_OBJTYPE_SOURCE_NODE,

	Lav_OBJTYPE_HRTF_NODE,
	Lav_OBJTYPE_SINE_NODE,
	Lav_OBJTYPE_HARD_LIMITER_NODE,
	Lav_OBJTYPE_CROSSFADING_DELAY_NODE,
	Lav_OBJTYPE_DOPPLERING_DELAY_NODE,
	Lav_OBJTYPE_AMPLITUDE_PANNER_NODE,
	Lav_OBJTYPE_PUSH_NODE,
	Lav_OBJTYPE_BIQUAD_NODE,
	Lav_OBJTYPE_PULL_NODE,
	Lav_OBJTYPE_GRAPH_LISTENER_NODE,
	Lav_OBJTYPE_RINGMOD_NODE,
	Lav_OBJTYPE_MULTIPANNER_NODE,
	Lav_OBJTYPE_FEEDBACK_DELAY_NETWORK_NODE,

	Lav_OBJTYPE_ADDITIVE_SQUARE_NODE,
	Lav_OBJTYPE_ADDITIVE_TRIANGLE_NODE,
	Lav_OBJTYPE_ADDITIVE_SAW_NODE,
	Lav_OBJTYPE_NOISE_NODE,
	Lav_OBJTYPE_IIR_NODE,
	Lav_OBJTYPE_GAIN_NODE,
	Lav_OBJTYPE_CHANNEL_SPLITTER_NODE,
	Lav_OBJTYPE_CHANNEL_MERGER_NODE,
	Lav_OBJTYPE_BUFFER_NODE,
	Lav_OBJTYPE_BUFFER_TIMELINE_NODE,
	Lav_OBJTYPE_RECORDER_NODE,
	Lav_OBJTYPE_CONVOLVER_NODE,
	Lav_OBJTYPE_FFT_CONVOLVER_NODE,
	Lav_OBJTYPE_THREE_BAND_EQ_NODE,
	Lav_OBJTYPE_FILTERED_DELAY_NODE,
	Lav_OBJTYPE_CROSSFADER_NODE,
	Lav_OBJTYPE_ONE_POLE_FILTER_NODE,
	Lav_OBJTYPE_FIRST_ORDER_FILTER_NODE,
	Lav_OBJTYPE_ALLPASS_NODE,
	Lav_OBJTYPE_FDN_REVERB_NODE,
	Lav_OBJTYPE_BLIT_NODE,
	Lav_OBJTYPE_DC_BLOCKER_NODE,
	Lav_OBJTYPE_LEAKY_INTEGRATOR_NODE,
	Lav_OBJTYPE_FILE_STREAMER_NODE,
};


/**Node states.*/
enum Lav_NODE_STATES {
	Lav_NODESTATE_PAUSED,
	Lav_NODESTATE_PLAYING,
	Lav_NODESTATE_ALWAYS_PLAYING,
};


/**Logging levels.*/
enum Lav_LOGGING_LEVELS {
	Lav_LOGGING_LEVEL_CRITICAL = 10,
	Lav_LOGGING_LEVEL_INFO = 20,
	Lav_LOGGING_LEVEL_DEBUG = 30,
	Lav_LOGGING_LEVEL_OFF = 40,
};


/**Initialize Libaudioverse.*/
Lav_PUBLIC_FUNCTION LavError Lav_initialize();

/**Shuts down the library.

After a call to this function, any Libaudioverse handles are invalid.
So too are any pointers that Libaudioverse gave you, of any form.*/
Lav_PUBLIC_FUNCTION LavError Lav_shutdown();

Lav_PUBLIC_FUNCTION LavError Lav_isInitialized(int* destination);


/**Query the thread's current error.
Pointers are valid until the next time an error happens on this thread.*/
Lav_PUBLIC_FUNCTION LavError Lav_errorGetMessage(const char** destination);

Lav_PUBLIC_FUNCTION LavError Lav_errorGetFile(const char** destination);

Lav_PUBLIC_FUNCTION LavError Lav_errorGetLine(int* destination);


/**Free any pointer that libaudioverse gives you.  If something goes wrong, namely that the pointer isn't from Libaudioverse in the first place, this tries to fail gracefully and give you an error, but don't rely on this.*/
Lav_PUBLIC_FUNCTION LavError Lav_free(void* ptr);


/**Handle refcounts.*/
Lav_PUBLIC_FUNCTION LavError Lav_handleIncRef(LavHandle handle);

Lav_PUBLIC_FUNCTION LavError Lav_handleDecRef(LavHandle handle);

/**Every handle has a first external access bit which is cleared by this function.
This is to avoid an issue with bindings that need to know if they should increment counts.*/
Lav_PUBLIC_FUNCTION LavError Lav_handleGetAndClearFirstAccess(LavHandle handle, int* destination);

Lav_PUBLIC_FUNCTION LavError Lav_handleGetRefCount(LavHandle handle, int* destination);

Lav_PUBLIC_FUNCTION LavError Lav_handleGetType(LavHandle handle, int* destination);



/**Configure and query logging.

These functions may be used before library initialization, the intent being that you can get initialization logs.  These functions, like all other functions, cannot be used after library termination.*/
typedef void (*LavLoggingCallback)(int level, const char* message);

Lav_PUBLIC_FUNCTION LavError Lav_setLoggingCallback(LavLoggingCallback cb);

Lav_PUBLIC_FUNCTION LavError Lav_getLoggingCallback(LavLoggingCallback* destination);

Lav_PUBLIC_FUNCTION LavError Lav_setLoggingLevel(int level);

Lav_PUBLIC_FUNCTION LavError Lav_getLoggingLevel(int* destination);


/**Configure the handle destroyed callback.  Also may be used before initialization.
This exists only for bindings.  If you use this in your C program, you may have design issues.*/
typedef void (*LavHandleDestroyedCallback)(LavHandle which);

Lav_PUBLIC_FUNCTION LavError Lav_setHandleDestroyedCallback(LavHandleDestroyedCallback cb);


Lav_PUBLIC_FUNCTION LavError Lav_deviceGetCount(unsigned int* destination);

Lav_PUBLIC_FUNCTION LavError Lav_deviceGetName(unsigned int index, char** destination);

Lav_PUBLIC_FUNCTION LavError Lav_deviceGetIdentifierString(unsigned int index, char** destination);

Lav_PUBLIC_FUNCTION LavError Lav_deviceGetChannels(unsigned int index, unsigned int* destination);


Lav_PUBLIC_FUNCTION LavError Lav_createServer(unsigned int sr, unsigned int blockSize, LavHandle* destination);


Lav_PUBLIC_FUNCTION LavError Lav_serverGetBlockSize(LavHandle serverHandle, int* destination);

Lav_PUBLIC_FUNCTION LavError Lav_serverGetBlock(LavHandle serverHandle, unsigned int channels, int mayApplyMixingMatrix, float* buffer);

Lav_PUBLIC_FUNCTION LavError Lav_serverGetSr(LavHandle serverHandle, int* destination);