libaudioverse-sys/pregenerated_bindings.rs

/* automatically generated by rust-bindgen */


 /// The public interface to Libaudioverse. 
 pub type LavError = :: std :: os :: raw :: c_int ; pub type LavHandle = :: std :: os :: raw :: c_int ; pub type LavParameterlessCallback = :: std :: option :: Option < unsafe extern "C" fn ( nodeHandle : LavHandle , userdata : * mut :: std :: os :: raw :: c_void ) > ; pub type LavTimeCallback = :: std :: option :: Option < unsafe extern "C" fn ( handle : LavHandle , time : f64 , userdata : * mut :: std :: os :: raw :: c_void ) > ; pub const Lav_ERRORS_Lav_ERROR_NONE : Lav_ERRORS = 0 ; pub const Lav_ERRORS_Lav_ERROR_UNKNOWN : Lav_ERRORS = 1 ; pub const Lav_ERRORS_Lav_ERROR_NOT_INITIALIZED : Lav_ERRORS = 2 ; pub const Lav_ERRORS_Lav_ERROR_TYPE_MISMATCH : Lav_ERRORS = 3 ; pub const Lav_ERRORS_Lav_ERROR_INVALID_PROPERTY : Lav_ERRORS = 4 ; pub const Lav_ERRORS_Lav_ERROR_NULL_POINTER : Lav_ERRORS = 5 ; pub const Lav_ERRORS_Lav_ERROR_MEMORY : Lav_ERRORS = 6 ; pub const Lav_ERRORS_Lav_ERROR_INVALID_POINTER : Lav_ERRORS = 7 ; pub const Lav_ERRORS_Lav_ERROR_INVALID_HANDLE : Lav_ERRORS = 8 ; pub const Lav_ERRORS_Lav_ERROR_RANGE : Lav_ERRORS = 9 ; pub const Lav_ERRORS_Lav_ERROR_CANNOT_INIT_AUDIO : Lav_ERRORS = 10 ; pub const Lav_ERRORS_Lav_ERROR_NO_SUCH_DEVICE : Lav_ERRORS = 11 ; pub const Lav_ERRORS_Lav_ERROR_FILE : Lav_ERRORS = 12 ; pub const Lav_ERRORS_Lav_ERROR_FILE_NOT_FOUND : Lav_ERRORS = 13 ; pub const Lav_ERRORS_Lav_ERROR_HRTF_INVALID : Lav_ERRORS = 14 ; pub const Lav_ERRORS_Lav_ERROR_CANNOT_CROSS_SERVERS : Lav_ERRORS = 15 ; pub const Lav_ERRORS_Lav_ERROR_CAUSES_CYCLE : Lav_ERRORS = 16 ; pub const Lav_ERRORS_Lav_ERROR_PROPERTY_IS_READ_ONLY : Lav_ERRORS = 17 ; pub const Lav_ERRORS_Lav_ERROR_OVERLAPPING_AUTOMATORS : Lav_ERRORS = 18 ; pub const Lav_ERRORS_Lav_ERROR_CANNOT_CONNECT_TO_PROPERTY : Lav_ERRORS = 19 ; pub const Lav_ERRORS_Lav_ERROR_BUFFER_IN_USE : Lav_ERRORS = 20 ; pub const Lav_ERRORS_Lav_ERROR_INTERNAL : Lav_ERRORS = 999 ; pub type Lav_ERRORS = :: std :: os :: raw :: c_int ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_INT : Lav_PROPERTY_TYPES = 0 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_FLOAT : Lav_PROPERTY_TYPES = 1 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_DOUBLE : Lav_PROPERTY_TYPES = 2 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_STRING : Lav_PROPERTY_TYPES = 3 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_FLOAT3 : Lav_PROPERTY_TYPES = 4 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_FLOAT6 : Lav_PROPERTY_TYPES = 5 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_FLOAT_ARRAY : Lav_PROPERTY_TYPES = 6 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_INT_ARRAY : Lav_PROPERTY_TYPES = 7 ; pub const Lav_PROPERTY_TYPES_Lav_PROPERTYTYPE_BUFFER : Lav_PROPERTY_TYPES = 8 ; pub type Lav_PROPERTY_TYPES = :: std :: os :: raw :: c_int ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_SERVER : Lav_OBJECT_TYPES = 0 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_BUFFER : Lav_OBJECT_TYPES = 1 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_GENERIC_NODE : Lav_OBJECT_TYPES = 2 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ENVIRONMENT_NODE : Lav_OBJECT_TYPES = 3 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_SOURCE_NODE : Lav_OBJECT_TYPES = 4 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_HRTF_NODE : Lav_OBJECT_TYPES = 5 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_SINE_NODE : Lav_OBJECT_TYPES = 6 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_HARD_LIMITER_NODE : Lav_OBJECT_TYPES = 7 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_CROSSFADING_DELAY_NODE : Lav_OBJECT_TYPES = 8 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_DOPPLERING_DELAY_NODE : Lav_OBJECT_TYPES = 9 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_AMPLITUDE_PANNER_NODE : Lav_OBJECT_TYPES = 10 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_PUSH_NODE : Lav_OBJECT_TYPES = 11 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_BIQUAD_NODE : Lav_OBJECT_TYPES = 12 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_PULL_NODE : Lav_OBJECT_TYPES = 13 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_GRAPH_LISTENER_NODE : Lav_OBJECT_TYPES = 14 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_RINGMOD_NODE : Lav_OBJECT_TYPES = 15 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_MULTIPANNER_NODE : Lav_OBJECT_TYPES = 16 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FEEDBACK_DELAY_NETWORK_NODE : Lav_OBJECT_TYPES = 17 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ADDITIVE_SQUARE_NODE : Lav_OBJECT_TYPES = 18 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ADDITIVE_TRIANGLE_NODE : Lav_OBJECT_TYPES = 19 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ADDITIVE_SAW_NODE : Lav_OBJECT_TYPES = 20 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_NOISE_NODE : Lav_OBJECT_TYPES = 21 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_IIR_NODE : Lav_OBJECT_TYPES = 22 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_GAIN_NODE : Lav_OBJECT_TYPES = 23 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_CHANNEL_SPLITTER_NODE : Lav_OBJECT_TYPES = 24 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_CHANNEL_MERGER_NODE : Lav_OBJECT_TYPES = 25 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_BUFFER_NODE : Lav_OBJECT_TYPES = 26 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_BUFFER_TIMELINE_NODE : Lav_OBJECT_TYPES = 27 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_RECORDER_NODE : Lav_OBJECT_TYPES = 28 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_CONVOLVER_NODE : Lav_OBJECT_TYPES = 29 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FFT_CONVOLVER_NODE : Lav_OBJECT_TYPES = 30 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_THREE_BAND_EQ_NODE : Lav_OBJECT_TYPES = 31 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FILTERED_DELAY_NODE : Lav_OBJECT_TYPES = 32 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_CROSSFADER_NODE : Lav_OBJECT_TYPES = 33 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ONE_POLE_FILTER_NODE : Lav_OBJECT_TYPES = 34 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FIRST_ORDER_FILTER_NODE : Lav_OBJECT_TYPES = 35 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_ALLPASS_NODE : Lav_OBJECT_TYPES = 36 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FDN_REVERB_NODE : Lav_OBJECT_TYPES = 37 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_BLIT_NODE : Lav_OBJECT_TYPES = 38 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_DC_BLOCKER_NODE : Lav_OBJECT_TYPES = 39 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_LEAKY_INTEGRATOR_NODE : Lav_OBJECT_TYPES = 40 ; pub const Lav_OBJECT_TYPES_Lav_OBJTYPE_FILE_STREAMER_NODE : Lav_OBJECT_TYPES = 41 ; pub type Lav_OBJECT_TYPES = :: std :: os :: raw :: c_int ; pub const Lav_NODE_STATES_Lav_NODESTATE_PAUSED : Lav_NODE_STATES = 0 ; pub const Lav_NODE_STATES_Lav_NODESTATE_PLAYING : Lav_NODE_STATES = 1 ; pub const Lav_NODE_STATES_Lav_NODESTATE_ALWAYS_PLAYING : Lav_NODE_STATES = 2 ; pub type Lav_NODE_STATES = :: std :: os :: raw :: c_int ; pub const Lav_LOGGING_LEVELS_Lav_LOGGING_LEVEL_CRITICAL : Lav_LOGGING_LEVELS = 10 ; pub const Lav_LOGGING_LEVELS_Lav_LOGGING_LEVEL_INFO : Lav_LOGGING_LEVELS = 20 ; pub const Lav_LOGGING_LEVELS_Lav_LOGGING_LEVEL_DEBUG : Lav_LOGGING_LEVELS = 30 ; pub const Lav_LOGGING_LEVELS_Lav_LOGGING_LEVEL_OFF : Lav_LOGGING_LEVELS = 40 ; pub type Lav_LOGGING_LEVELS = :: std :: os :: raw :: c_int ; extern "C" {
 
 /// Initialize Libaudioverse. 
 
 pub fn Lav_initialize ( ) -> LavError ; 
} extern "C" {
 
 /// Shuts down the library.
///
/// After a call to this function, any Libaudioverse handles are invalid.
/// So too are any pointers that Libaudioverse gave you, of any form. 
 
 pub fn Lav_shutdown ( ) -> LavError ; 
} extern "C" {
 pub fn Lav_isInitialized ( destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 
 /// Query the thread's current error.
/// Pointers are valid until the next time an error happens on this thread. 
 
 pub fn Lav_errorGetMessage ( destination : * mut * const :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_errorGetFile ( destination : * mut * const :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_errorGetLine ( destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 
 /// Free any pointer that libaudioverse gives you.  If something goes wrong, namely that the pointer isn't from Libaudioverse in the first place, this tries to fail gracefully and give you an error, but don't rely on this. 
 
 pub fn Lav_free ( ptr : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 
 /// Handle refcounts. 
 
 pub fn Lav_handleIncRef ( handle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_handleDecRef ( handle : LavHandle , ) -> LavError ; 
} extern "C" {
 
 /// Every handle has a first external access bit which is cleared by this function.
/// This is to avoid an issue with bindings that need to know if they should increment counts. 
 
 pub fn Lav_handleGetAndClearFirstAccess ( handle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_handleGetRefCount ( handle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_handleGetType ( handle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} 
 /// Configure and query logging.
///
/// These functions may be used before library initialization, the intent being that you can get initialization logs.  These functions, like all other functions, cannot be used after library termination. 
 pub type LavLoggingCallback = :: std :: option :: Option < unsafe extern "C" fn ( level : :: std :: os :: raw :: c_int , message : * const :: std :: os :: raw :: c_char ) > ; extern "C" {
 pub fn Lav_setLoggingCallback ( cb : LavLoggingCallback , ) -> LavError ; 
} extern "C" {
 pub fn Lav_getLoggingCallback ( destination : * mut LavLoggingCallback , ) -> LavError ; 
} extern "C" {
 pub fn Lav_setLoggingLevel ( level : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_getLoggingLevel ( destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} 
 /// Configure the handle destroyed callback.  Also may be used before initialization.
/// This exists only for bindings.  If you use this in your C program, you may have design issues. 
 pub type LavHandleDestroyedCallback = :: std :: option :: Option < unsafe extern "C" fn ( which : LavHandle ) > ; extern "C" {
 pub fn Lav_setHandleDestroyedCallback ( cb : LavHandleDestroyedCallback , ) -> LavError ; 
} extern "C" {
 pub fn Lav_deviceGetCount ( destination : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_deviceGetName ( index : :: std :: os :: raw :: c_uint , destination : * mut * mut :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_deviceGetIdentifierString ( index : :: std :: os :: raw :: c_uint , destination : * mut * mut :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_deviceGetChannels ( index : :: std :: os :: raw :: c_uint , destination : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createServer ( sr : :: std :: os :: raw :: c_uint , blockSize : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverGetBlockSize ( serverHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverGetBlock ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_uint , mayApplyMixingMatrix : :: std :: os :: raw :: c_int , buffer : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverGetSr ( serverHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 
 /// Set or clear the output device. 
